# TestTask_C32

./: .gitignore  Makefile  docker-compose.yml  hello.py  pyproject.toml
backend/: Dockerfile  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/dependencies/: auth.py  databas.py  repositories.py
backend/app/api/v1/endpoints/: __init__.py  healthcheck.py  package_types.py  packages.py
backend/app/api/v1/schemas/: __init__.py  package.py
backend/app/core/: config.py  exceptions.py  logger.py  scheduler.py
backend/app/db/: base.py  mysql.py  redis.py
backend/app/db/models/: __init__.py  package.py  package_type.py  user_session.py
backend/app/db/repositories/: base.py  package_repository.py  package_type_repository.py  user_session_repository.py
backend/app/middleware/: exception_handler.py  logging.py  session.py
backend/app/schemas/: healthcheck.py
backend/app/seed/: package_types.py
backend/app/services/: cbrf.py  delivery_cost_calculator.py  health_checker.py  package_service.py  package_type_service.py
backend/app/taks/: session_cleanup.py
backend/test/: conftest.py  test_db.py
backend/tests/: README.md  conftest.py  test_api_packages.py  test_db.py  utils.py
backend/tests/api/v1/endpoints/: test_package_types.py
backend/tests/db/repositories/: test_package_type_repository.py
backend/tests/test_external/: test_base_client.py  test_cbrf_client.py
