[project]
name = "testtask-c32"
version = "0.1.0"
authors = [
    {name = "Alexksandrov Dmtirii", email = "Adsis369@gmail.com"},
]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "loguru>=0.7.3",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]
